--- a/themes/pego/layouts/partials/footer/scripts.html
+++ b/themes/pego/layouts/partials/footer/scripts.html
@@ -1,7 +1,7 @@
 {{ $opts := "" }}
 {{ if hugo.IsProduction }}
   {{ $opts = dict "targetPath" "main.js" }}
-{{ else }}  
+{{ else }}
   {{ $opts = dict "targetPath" "main.js" "sourceMap" "inline" }}
 {{ end }}
 {{ $script := resources.Get "js/app.js" | js.Build $opts }}
@@ -22,13 +22,13 @@
 {{ if hugo.IsProduction }}
   {{/*  Only rebuild concatenated files in production (in dev there is no concat)  */}}
   {{/*  Only minify in production to allow source maps  */}}
-  {{ $final = $script | js.Build "main.js" | minify }}  
+  {{ $final = $script | js.Build "main.js" | minify }}
 {{ else }}
   {{ $final = $script }}
 {{ end }}
 <script src="{{ $final.Permalink }}"></script>
 
 <!-- Add Google Analytics v4 tag if not using GTM -->
-{{ if and (not .Site.IsServer) (not .Site.Params.gtm_id) }}
+{{ if and (not hugo.IsServer) (not .Site.Params.gtm_id) }}
   {{ template "_internal/google_analytics.html" . }}
 {{ end }}
