--- a/themes/pego/assets/scss/layout/_footer.scss
+++ b/themes/pego/assets/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .footer {
-  background-color: var(--color-contrast-lower);
+  background-color: black;
 }
 
 .footer-socials {
@@ -14,5 +14,5 @@
 .footer-copyright {
   text-align: center;
   @include font-size('base');
-  color: var(--color-contrast-medium-high);
+  color: #fff;
 }
