--- a/themes/pego/layouts/partials/footer/footer.html
+++ b/themes/pego/layouts/partials/footer/footer.html
@@ -3,7 +3,9 @@
     {{ partial "footer/newsletter.html" . }}
   {{ end }}
   <div class="section footer">
-    <p class="footer-copyright">&copy; {{ now.Format "2006" }} &middot; 
+    <p class="footer-copyright">
+    <img src="{{ (resources.Get "sudweb-small.png").Permalink }}" alt="Logo Sudweb"><br>
+    &copy; {{ now.Format "2006" }} &middot;
       <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
       {{ with .Site.Params.footer_text | markdownify }}
         <span>&middot; {{ . }}</span>
