--- a/themes/pego/assets/scss/layout/_footer.scss
+++ b/themes/pego/assets/scss/layout/_footer.scss
@@ -3,7 +3,12 @@
 // -----------------------------------------------------------------------------
 
 .footer {
+  padding: 0.5rem;
   background-color: black;
+}
+
+.footer a {
+  color: #fff;
 }
 
 .footer-socials {
