--- a/themes/pego/layouts/partials/footer/footer.html
+++ b/themes/pego/layouts/partials/footer/footer.html
@@ -4,7 +4,7 @@
   {{ end }}
   <div class="section footer">
     <p class="footer-copyright">
-    <img src="{{ (resources.Get "sudweb-small.png").Permalink }}" alt="Logo Sudweb"><br>
+    Avec l’aide de <br><img src="{{ (resources.Get "sudweb-small.png").Permalink }}" alt="Logo Sudweb"><br>
     &copy; {{ now.Format "2006" }} &middot;
       <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
       {{ with .Site.Params.footer_text | markdownify }}
